--- a/templates/pass_reset_email.html
+++ b/templates/pass_reset_email.html
@@ -161,6 +161,19 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
   <div style="background-color: #ffffff;height: 100%;width: 100% !important;">
  <div style="box-sizing: border-box; height: 100%; padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;">
   
+  <table id="u_content_heading_1" style="font-family:'Raleway',sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%">
+    <tbody>
+      <tr>
+        <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:30px 10px 5px;font-family:'Raleway',sans-serif;text-align:left" >
+          
+
+      <h1 style="margin: 0px; color: #f35900; line-height: 140%; text-align: center; word-wrap: break-word; font-family: 'Playfair Display',serif; font-size: 26px; font-weight: 400;"><strong>Hi {{name}}</strong></h1>
+
+  
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
 <table id="u_content_text_2" style="font-family:'Raleway',sans-serif;" role="presentation" cellpadding="0" cellspacing="0" width="100%" >
   <tbody>
@@ -168,7 +181,8 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:5px 50px 10px;font-family:'Raleway',sans-serif;">
         
   <div style="font-size: 14px; line-height: 140%; text-align: center; word-wrap: break-word;">
-    <p style="line-height: 140%;">Welcome to Labour Connect Hub, to get started click the link below to confirm your email.</p>
+    <p style="line-height: 140%;">We've received a request to reset your password.</p>
+    <p style="line-height: 140%;">If you didn't make the request, just ignore this message. Otherwise, click the button below to reset your password. Password reset link is only valid for 10 minutes</p>
   </div>
 
       </td>
@@ -182,7 +196,7 @@ table, td { color: #000000; } #u_body a { color: #0000ee; text-decoration: under
       <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px 10px 0px;font-family:'Raleway',sans-serif;">
 <div style="text-align: center;">
     <a href="{{token}}" target="_blank" class="v-button" style="box-sizing: border-box;display: inline-block;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #f35900; border-radius: 4px;-webkit-border-radius: 4px; -moz-border-radius: 4px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; font-size: 14px;">
-      <span class="v-padding" style="display:block;padding:10px 20px;line-height:120%;"><span style="line-height: 16.8px;">Confirm Your Email</span></span>
+      <span class="v-padding" style="display:block;padding:10px 20px;line-height:120%;"><span style="line-height: 16.8px;">Reset your password</span></span>
     </a>
 </div>
 
